M3-19: merged module did not read org.slf4j